frontend/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bockvote-frontend
  namespace: demo
  labels:
    app: bockvote-frontend
spec:
  replicas: 2
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: bockvote-frontend
  template:
    metadata:
      labels:
        app: bockvote-frontend
    spec:
      containers:
        - name: bockvote-frontend
          image: madhavkeshava/bockvote-frontend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 30
            periodSeconds: 30
          resources:
            requests:
              cpu: 200m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 512Mi
