frontend/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bockvote-frontend-svc
  namespace: demo
  labels:
    app: bockvote-frontend
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
spec:
  type: LoadBalancer
  selector:
    app: bockvote-frontend
  ports:
    - name: http
      port: 3000
      targetPort: 3000
      protocol: TCP
