frontend/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bockvote-frontend-ingress
  namespace: demo
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - http:
        paths:
          - path: /bockvote
            pathType: Prefix
            backend:
              service:
                name: bockvote-frontend-svc
                port:
                  number: 3000
